Fix double border on middle nav
Fixes #4

--- a/wedding/static/sass/_nav.scss
+++ b/wedding/static/sass/_nav.scss
@@ -27,6 +27,10 @@
                 border-right: 1px solid rgba(0, 0, 0, .1);
             }
 
+            &.active a {
+                border-left: 0;
+            }
+
             &:first-child a {
                 border-left: 0;
             }
